# PaddleOCR-VL-Deployment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.docker.txt  server.py
deploy/: vllm_config.yaml
deploy/hps/: README.md
deploy/hps/server/: pipeline_config.yaml
deploy/hps/server/model_repo/layout-parsing/: config_cpu.pbtxt  config_gpu.pbtxt
deploy/hps/server/model_repo/layout-parsing/1/: model.py
deploy/hps/server/model_repo/restructure-pages/1/: model.py
docs/: API.md  ARCHITECTURE_DECISIONS.md  REQUEST_FLOW.md
paddlocr_vl/: __init__.py  jobs.py  main.py  pdf_utils.py  schemas.py  worker.py
paddlocr_vl/api/: router.py
paddlocr_vl/api/routes/: documents.py  health.py
paddlocr_vl/core/: config.py  dependencies.py  logger.py
paddlocr_vl/db/: __init__.py  jobs.py
paddlocr_vl/service/: __init__.py  layout.py  paddleocr_vl.py  vllm.py
paddlocr_vl/utils/: __init__.py  file_utils.py  markdown_assembler.py
paddlocr_vl/workers/: __init__.py  layout.py  vlm.py
scripts/: download_models.sh  json_to_markdown.py  load_test.py
tests/: conftest.py  test_api.py  test_artifacts.py  test_config.py  test_jobs.py  test_layout_worker.py  test_load_test.py  test_markdown_assembler.py  test_pdf_utils.py  test_region_queue.py  test_service.py  test_triton.py
