[project]
name = "paddlocr-vl"
version = "1.0.0"
description = "Authenticated PaddleOCR-VL API backed by vLLM"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.115.0,<1",
    "paddlepaddle-gpu==3.3.0",
    "paddleocr[doc-parser]>=3.3.0,<3.4",
    "python-dotenv>=1.0.1,<2",
    "python-multipart>=0.0.20,<1",
    "safetensors>=0.5.0,<1",
    "uvicorn[standard]>=0.34.0,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1",
    "pytest>=8.3.5,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paddlocr_vl"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "paddle-cu130"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-cu130" }
